--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
+    "@auth0/angular-jwt": "^2.0.0",
+    "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
     "bootswatch": "^4.1.3",
     "core-js": "^2.5.7",
