--- a/package.json
+++ b/package.json
@@ -17,42 +17,42 @@
     "@angular/compiler": "6.1.2",
     "@angular/core": "6.1.2",
     "@angular/forms": "6.1.2",
-    "@angular/http": "6.1.2",
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
-    "@auth0/angular-jwt": "^2.0.0",
-    "alertifyjs": "^1.11.2",
-    "bootstrap": "^4.1.3",
-    "bootswatch": "^4.1.3",
-    "core-js": "^2.5.7",
+    "@auth0/angular-jwt": "^3.0.1",
+    "alertifyjs": "^1.13.1",
+    "bootstrap": "^4.4.1",
+    "bootswatch": "^4.4.1",
+    "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.3.0",
-    "ngx-bootstrap": "^3.0.1",
-    "ngx-gallery": "^5.3.2",
-    "rxjs": "^6.2.2",
+    "ngx-bootstrap": "^5.3.2",
+    "ngx-gallery": "^5.10.0",
+    "rxjs": "^6.5.4",
     "time-ago-pipe": "^1.3.2",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "6.1.3",
+    "@angular-devkit/build-angular": "~0.803.23",
+    "@angular/cli": "8.3.23",
     "@angular/compiler-cli": "6.1.2",
     "@angular/language-service": "6.1.2",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.116",
-    "codelyzer": "^4.4.3",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.9.2"
+    "@types/jasmine": "^3.5.1",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^6.14.9",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "protractor": "^5.4.2",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   }
 }
