--- a/package.json
+++ b/package.json
@@ -31,18 +31,17 @@
     "ngx-gallery": "^5.10.0",
     "rxjs": "^6.5.4",
     "time-ago-pipe": "^1.3.2",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.23",
-    "@angular/cli": "8.3.23",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "6.1.3",
     "@angular/compiler-cli": "6.1.2",
     "@angular/language-service": "6.1.2",
     "@types/jasmine": "^3.5.1",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^6.14.9",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.4.1",
