--- a/package.json
+++ b/package.json
@@ -12,46 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.2",
-    "@angular/common": "6.1.2",
-    "@angular/compiler": "6.1.2",
-    "@angular/core": "6.1.2",
-    "@angular/forms": "6.1.2",
-    "@angular/platform-browser": "6.1.2",
-    "@angular/platform-browser-dynamic": "6.1.2",
-    "@angular/router": "6.1.2",
-    "@auth0/angular-jwt": "^3.0.1",
-    "alertifyjs": "^1.13.1",
-    "bootstrap": "^4.4.1",
-    "bootswatch": "^4.4.1",
-    "core-js": "^3.6.4",
+    "@angular/animations": "^8.2.3",
+    "@angular/common": "^8.2.3",
+    "@angular/compiler": "^8.2.3",
+    "@angular/core": "^8.2.3",
+    "@angular/forms": "^8.2.3",
+    "@angular/platform-browser": "^8.2.3",
+    "@angular/platform-browser-dynamic": "^8.2.3",
+    "@angular/router": "^8.2.3",
+    "@auth0/angular-jwt": "^3.0.0",
+    "alertifyjs": "^1.11.4",
+    "bootstrap": "^4.3.1",
+    "bootswatch": "^4.3.1",
+    "core-js": "^3.2.1",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.3.0",
-    "ngx-bootstrap": "^5.3.2",
+    "ngx-bootstrap": "^5.1.1",
     "ngx-gallery": "^5.10.0",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.5.2",
     "time-ago-pipe": "^1.3.2",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.10.0",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "6.1.3",
-    "@angular/compiler-cli": "6.1.2",
-    "@angular/language-service": "6.1.2",
-    "@types/jasmine": "^3.5.1",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^6.14.9",
-    "codelyzer": "^5.2.1",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "^5.4.2",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
-    "typescript": "^3.6"
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "^8.2.3",
+    "@angular/language-service": "^8.2.3",
+    "@types/jasmine": "~3.4.0",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~12.7.2",
+    "codelyzer": "~5.1.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.2.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.19.0",
+    "typescript": "~3.5.3"
   }
 }
